# risc0-mpt-collapse

./: Cargo.toml  README.adoc  rustfmt.toml
.github/workflows/: ci.yml
assets/: sheet.excalidraw
src/: lib.rs  main.rs
