[package]
name = "risc0-mpt-collapse"
version = "0.1.0"
edition = "2024"

[dependencies]

# alloy
alloy-primitives = { version = "1.2.0", default-features = false, features = ["map-foldhash", "tiny-keccak", "k256"] } # `sha3-keccak` is required to use SP1 precompile; `tiny-keccak` is for Risc0 precompile.
alloy-trie = { version = "0.9.0", default-features = false }

# risc0 MPT
risc0-ethereum-trie = { git = "https://github.com/risc0/risc0-ethereum" }
